# cs552-capstone

./: LICENSE  PROPOSAL.md  README.md  SDD.md  Taskfile.yaml  netlify.toml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Taskfile.yaml  config.py  main.py  pyproject.toml
backend/evaluation/: Taskfile.yaml  evaluate_accuracy.py  evaluate_concurrent.py  evaluate_latency.py  render_figures.py  run_remote_accuracy.py
backend/prompts/: edit.txt  generate.txt
backend/routers/: evaluation.py  generate.py  transcribe.py
backend/services/: llama_service.py  whisper_service.py
evaluation/: .gitignore  README.md  Taskfile.yaml  evaluate_accuracy.py  evaluate_latency.py  metrics.py  test_cases.json
frontend/: Taskfile.yaml  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: EditCommand.jsx  EquationDisplay.jsx  EvaluationPanel.jsx  TranscriptPane.jsx  VoiceInput.jsx
frontend/src/hooks/: useAudioRecorder.js
frontend/src/services/: api.js  speechProvider.js
