[project]
name = "cs552-backend"
version = "0.1.0"
description = "Voice-driven LaTeX equation editor backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
]

[dependency-groups]
model = [
    "torch>=2.5",
    "transformers>=4.46",
    "accelerate>=1.1",
    "openai-whisper>=20240930",
]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"
