[project]
name = "cs552-backend"
version = "0.1.0"
description = "Voice-driven LaTeX equation editor backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
]

[dependency-groups]
model = [
    "llama-cpp-python>=0.3.2",
    "openai-whisper>=20240930",
    "huggingface-hub>=0.26",
]
# Heavier transformers/torch path, reserved for HF Inference Endpoints deploy in Phase 5.
model-transformers = [
    "torch>=2.5",
    "transformers>=4.46",
    "accelerate>=1.1",
]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "httpx>=0.27",
]
# Phase 4 evaluation harness in ./evaluation
eval = [
    "sympy>=1.13",
    "antlr4-python3-runtime==4.11",
    "pylatexenc>=2.10",
    "python-Levenshtein>=0.25",
    "httpx>=0.27",
    "sacrebleu>=2.4",
    "rouge-score>=0.1.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"
