[project]
name = "cs552-backend"
version = "0.1.0"
description = "Voice-driven LaTeX equation editor backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    # Evaluation metrics are imported by routers/evaluation.py — no longer optional.
    "sympy>=1.13",
    "antlr4-python3-runtime==4.11",
    "pylatexenc>=2.10",
    "python-Levenshtein>=0.25",
    "sacrebleu>=2.4",
    "rouge-score>=0.1.2",
]

[dependency-groups]
# Heavy inference stack. Install for local/deployed real inference; skip in
# CI-only environments that just need to exercise routing/metrics code.
model = [
    "llama-cpp-python>=0.3.2",
    "openai-whisper>=20240930",
    "huggingface-hub>=0.26",
]
# Transformers/torch path — not used by the current Space deploy. Kept in case
# we ever need the HF Inference Endpoints schema.
model-transformers = [
    "torch>=2.5",
    "transformers>=4.46",
    "accelerate>=1.1",
]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"
